# abracadabra

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/abracadabra/: Cargo.toml
crates/abracadabra/src/: cli.rs  lib.rs  main.rs  runner.rs
crates/abracadabra/src/aggregator/: mod.rs  tests.rs
crates/abracadabra/src/aggregator/tests/: analyze_alerts.rs  classify_skips.rs  ingest.rs  log_patterns.rs  mod.rs  produce_window.rs  standstill.rs
crates/abracadabra/src/model/: alerts.rs  analysis.rs  buckets.rs  mod.rs  slot.rs  state.rs  window.rs
crates/abracadabra/src/parser/: bank.rs  known_issues.rs  line.rs  metrics.rs  mod.rs  root.rs  votor.rs
crates/abracadabra/src/tui/: app.rs  app_tests.rs  mod.rs  theme.rs  view.rs
crates/abracadabra/src/tui/panel/: alerts.rs  header.rs  leader_timeouts.rs  mod.rs  overview.rs  slots.rs  status_bar.rs  timeseries.rs  windows.rs
crates/abracadabra/src/tui/widget/: hbar.rs  kpi.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: dashboard.rs  detail.rs  lint.rs  loc_report.rs  main.rs
