[workspace]
resolver = "2"
members = [
    "crates/abracadabra",
    "xtask",
]

# `cargo build` / `cargo check` ignore xtask by default.
# xtask is invoked explicitly via `cargo xtask <cmd>` (see .cargo/config.toml).
default-members = ["crates/abracadabra"]

[workspace.package]
edition = "2021"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
# Strict lint groups (priority lowered so individual lints can override).
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Enforced lints (escalated above the group default).
large_enum_variant     = "warn"
large_stack_arrays     = "warn"
inefficient_to_string  = "warn"
clone_on_ref_ptr       = "warn"
rc_buffer              = "warn"
rc_mutex               = "warn"
box_collection         = "warn"
vec_box                = "warn"
linkedlist             = "warn"
unnecessary_to_owned   = "warn"
# `string_to_string` was removed from clippy in 1.95; the cases it
# caught are now covered by `implicit_clone` (already in pedantic).
unwrap_used            = "warn"
expect_used            = "warn"

# Allow common pedantic noise without disabling the group.
doc_markdown                = "allow"
missing_errors_doc          = "allow"
missing_panics_doc          = "allow"
module_name_repetitions     = "allow"
semicolon_if_nothing_returned = "allow"
needless_pass_by_value      = "allow"
too_many_lines              = "allow"
match_same_arms             = "allow"
similar_names               = "allow"
wildcard_imports            = "allow"
cast_precision_loss         = "allow"
cast_possible_truncation    = "allow"
cast_sign_loss              = "allow"
cast_possible_wrap          = "allow"
cast_lossless               = "allow"
must_use_candidate          = "allow"
return_self_not_must_use    = "allow"
# Project is local-only; we do not publish to crates.io.
cargo_common_metadata       = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
