[package]
name        = "abracadabra"
version     = "0.1.1"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors     = ["Matsuro Hadouken <matsuro-hadouken@protonmail.com>"]
description = "Solana Alpenglow validator log analyzer — TUI dashboard"
homepage    = "https://art3mis.cloud"
repository  = "https://github.com/matsuro-hadouken/abracadabra"
keywords    = ["solana", "alpenglow", "validator", "tui", "log-analysis"]
categories  = ["command-line-utilities"]

[lints]
workspace = true

[dependencies]
# TUI rendering. crossterm backend so we share the terminal driver with `crossterm` below.
ratatui   = { version = "0.30.0", default-features = false, features = ["crossterm"] }                     # audited 2026-05-24 [✓]
# Terminal events + raw mode. `events` is the input subsystem (key/mouse).
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }                        # audited 2026-05-24 [✓]
# CLI argument parsing via derive macros.
clap      = { version = "4.6.1",  default-features = false, features = ["std", "derive", "help", "usage"] } # audited 2026-05-24 [✓]
# Regex engine for log-line body parsing. `perf` enables SIMD/cache optimisations.
regex     = { version = "1.12.3", default-features = false, features = ["std", "perf"] }                   # audited 2026-05-24 [✓]
# Derive macros for typed error enums.
thiserror = { version = "2.0.18", default-features = false }                                                # audited 2026-05-24 [✓]
# ISO-8601 nanosecond timestamp parsing. Already transitively pulled in by ratatui.
time      = { version = "0.3.47", default-features = false, features = ["std", "parsing", "formatting", "macros"] } # audited 2026-05-24 [✓]
